ctrl+mouseup should set mouse button to right button the same way mouse down does. b=451870 r=josh sr=roc